[workspace]
members = ["plonky2x/core", "plonky2x/derive", "rustx", "client"]
resolver = "2"

[profile.release]
opt-level = 3
incremental = true
#lto = "fat"
#codegen-units = 1

[profile.bench]
opt-level = 3

[patch.'https://github.com/mir-protocol/plonky2.git']
plonky2 = { git = "https://github.com/succinctlabs/plonky2.git", branch = "chris/recursion" }
