[package]
name = "succinct-client"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.4.2", features = ["serde"] }
anyhow = "1.0.75"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.192"
serde_json = "1.0.108"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
