[package]
name = "rustx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parallel", "std", "timing"]
parallel = ["plonky2/parallel"]
std = ["plonky2/std"]
timing = ["plonky2/timing"]
ci = []

[dependencies]
alloy-primitives = "0.4.2"
alloy-sol-types = "0.4.2"
clap = "4.4.6"
dotenv = "0.15.0"
env_logger = "0.10.0"
ethers = "2.0.10"
hex = "0.4.3"
log = "0.4.20"
plonky2 = { git = "https://github.com/mir-protocol/plonky2.git", default-features = false, rev = "d2598bd" }
plonky2x = { path = "../plonky2x/core" }
serde = "1.0.188"
serde_json = "1.0.107"
tokio = "1.33.0"

[dev-dependencies]
plonky2 = { git = "https://github.com/mir-protocol/plonky2.git", rev = "d2598bd", features = [
    "gate_testing",
] }
