[package]
name = "beacon-validator-statistics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2x = { path = "../../plonky2x"}
plonky2 = { git = "https://github.com/mir-protocol/plonky2.git", default-features = false}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"