[package]
edition = "2021"
name = "plonky2x"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ci = []
default = ["parallel", "std", "timing"]
parallel = ["plonky2/parallel"]
std = ["plonky2/std", "itertools/use_std"]
timing = ["plonky2/timing"]

[dependencies]
plonky2 = {git = "https://github.com/mir-protocol/plonky2.git", default-features = false, rev = "d2598bd"}
plonky2x-derive = {path = "../derive"}
starkyx = {git = "https://github.com/succinctlabs/starkyx.git", branch = "ratan/rm-dalek-lock"}

anyhow = "1.0.75"
array-macro = "2.1.5"
async-trait = "0.1.73"
backtrace = "0.3"
base64 = "0.13"
bincode = "1.3.3"
clap = {version = "4.4.0", features = ["derive"]}
curve25519-dalek = "4"
digest = "0.10.7"
dotenv = "0.15.0"
ed25519-dalek = {version = "2.0.0", features = ["rand_core"]}
env_logger = "0.10.0"
ethers = {version = "2.0"}
ff = {package = "ff", version = "0.13", features = ["derive"]}
futures = "0.3.28"
hex = "0.4.3"
itertools = {version = "0.10.0", default-features = false}
lazy_static = "1.4.0"
log = {version = "0.4.14", default-features = false}
num = {version = "0.4", default-features = false}
num-bigint = {version = "0.4", features = ["rand"]}
rand = {version = "0.8.4", package = "rand"}
reqwest = {version = "0.11.4", features = ["blocking", "json"]}
serde = {version = "1.0.187", features = ["derive"]}
serde_json = "1.0.103"
serde_plain = "1.0.2"
serde_with = "3.3.0"
sha2 = "0.10.7"
sha256 = "1.4.0"
tokio = {version = "1", features = ["full"]}
tracing = "0.1.37"
uuid = {version = "1.4.1", features = ["serde"]}

[dev-dependencies]
env_logger = "0.10.0"
plonky2 = {git = "https://github.com/mir-protocol/plonky2.git", rev = "d2598bd", features = [
  "gate_testing",
]}
rust-crypto = "0.2"
